# claude-code-ppc

./: .env.example  CLAUDE.md  README.md  lessons.md
.claude/skills/eval-report/: SKILL.md
.claude/skills/learning-opportunity/: SKILL.md
.claude/skills/repo-health/: SKILL.md
.claude/skills/schema-validator/: SKILL.md
.claude/skills/visualize-flow/: SKILL.md
.claude/skills/weekly-update/: SKILL.md
bigquery/: README.md
bigquery/metrics/: calculated-metrics.md  channel-breakdown.md
bigquery/schemas/: _template.md  google_ads_transfer.md
docs/: graduation-guide.md  index.md  technical-patterns.md  tools.md
production-template/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
production-template/tasks/: todo.md
projects/_template/: GOAL.md
projects/_template/tasks/: todo.md
roadmap/: overview.md  priorities.md
setup/: SETUP.md  context.md
specs/: TEMPLATE.md
tasks/: lessons.md  todo.md
